# sra_scann_adapter

./: README.en.md  README.md  ksl  project.sh
hw_alg/: BUILD.bazel  include  lib
scann/: BUILD.bazel  CMakeLists.txt  WORKSPACE  cmdline.h  create_config.py  eval.cpp  requirements.txt  setup.py
scann/build_deps/: build_pip_pkg.sh
scann/scann/: hw_alg
scann/scann/base/: BUILD.bazel  reordering_helper_factory.cc  search_parameters.cc  search_parameters.h  single_machine_base.cc  single_machine_base.h  single_machine_factory_options.cc  single_machine_factory_options.h  single_machine_factory_scann.cc
scann/scann/base/internal/: BUILD.bazel  single_machine_factory_impl.cc  single_machine_factory_impl.h  tree_x_hybrid_factory.cc  tree_x_hybrid_factory.h
scann/scann/brute_force/: BUILD.bazel  brute_force.cc  brute_force.h  scalar_quantized_brute_force.cc  scalar_quantized_brute_force.h
scann/scann/data_format/: BUILD.bazel  datapoint.cc  datapoint.h  dataset.cc  dataset.h  docid_collection.cc  docid_collection.h  docid_collection_interface.h  docid_lookup.h  features.proto  gfv_conversion.h  gfv_properties.cc  gfv_properties.h  sparse_low_level.h
scann/scann/data_format/internal/: BUILD.bazel  short_string_optimized_string.h  string_view32.h
scann/scann/distance_measures/many_to_many/: BUILD.bazel  fp8_transposed.cc  fp8_transposed.h  many_to_many.h  many_to_many_common.h  many_to_many_double.cc  many_to_many_fixed8.cc  many_to_many_float.cc  many_to_many_floating_point.h  many_to_many_impl.inc  many_to_many_orthogonality_amplification.cc  many_to_many_templates.h
scann/scann/distance_measures/one_to_many/: BUILD.bazel  one_to_many.h  one_to_many_helpers.h  one_to_many_impl.inc  scale_encoding.proto
scann/scann/distance_measures/one_to_one/: BUILD.bazel  binary_distance_measure_base.cc  binary_distance_measure_base.h  cosine_distance.cc  cosine_distance.h  dot_product.cc  dot_product.h  dot_product_avx1.cc  dot_product_avx1.h  dot_product_avx2.cc  dot_product_avx2.h  dot_product_sse4.cc  dot_product_sse4.h  hamming_distance.cc  hamming_distance.h  jaccard_distance.cc  jaccard_distance.h  l1_distance.cc  l1_distance.h  l1_distance_sse4.cc  l1_distance_sse4.h  l2_distance.cc  l2_distance.h  l2_distance_avx1.cc  l2_distance_avx1.h  l2_distance_sse4.cc  l2_distance_sse4.h  limited_inner_product.cc  limited_inner_product.h  nonzero_intersect_distance.cc  nonzero_intersect_distance.h
scann/scann/hashes/asymmetric_hashing2/: BUILD.bazel  indexing.cc  indexing.h  querying.cc  querying.h  searcher.cc  searcher.h  training.h  training_model.cc  training_model.h  training_options.cc  training_options.h  training_options_base.cc  training_options_base.h
scann/scann/hashes/internal/: BUILD.bazel  asymmetric_hashing_impl.cc  asymmetric_hashing_impl.h  asymmetric_hashing_lut16.h  asymmetric_hashing_postprocess.h  lut16_avx2.h  lut16_avx2.inc  lut16_avx512.h  lut16_avx512.inc  lut16_avx512_swizzle.cc  lut16_avx512_swizzle.h  lut16_interface.h  lut16_sse4.h  lut16_sse4.inc  stacked_quantizers.cc  stacked_quantizers.h
scann/scann/metadata/: metadata_getter.cc  metadata_getter.h
scann/scann/oss_wrappers/: BUILD.bazel  scann_bits.cc  scann_bits.h  scann_cpu_info.cc  scann_cpu_info.h  scann_serialize.cc  scann_serialize.h  scann_status.cc  scann_status.h  scann_status_builder.cc  scann_status_builder.h  scann_threadpool.cc  scann_threadpool.h
scann/scann/partitioning/: BUILD.bazel  kmeans_tree_like_partitioner.h  kmeans_tree_partitioner.cc  kmeans_tree_partitioner.h  kmeans_tree_partitioner.proto  kmeans_tree_partitioner_helper.cc  kmeans_tree_partitioner_utils.h  orthogonality_amplification_utils.h  partitioner.proto  partitioner_base.cc  partitioner_base.h  partitioner_factory.cc  partitioner_factory.h  partitioner_factory_base.cc  partitioner_factory_base.h  projecting_decorator.cc  projecting_decorator.h
scann/scann/projection/: BUILD.bazel  chunking_projection.cc  chunking_projection.h  projection_base.cc  projection_base.h  projection_factory.cc  projection_factory.h
scann/scann/proto/: BUILD.bazel  centers.proto  exact_reordering.proto  hash.proto  hashed.proto  incremental_updates.proto  input_output.proto  metadata.proto  min_distance.proto  partitioning.proto  projection.proto  results.proto  scann.proto
scann/scann/restricts/: BUILD.bazel  restrict_allowlist.cc  restrict_allowlist.h
scann/scann/scann_ops/: scann_assets.proto
scann/scann/scann_ops/cc/: BUILD.bazel  scann.cc  scann.h  scann_npy.cc  scann_npy.h
scann/scann/scann_ops/py/: BUILD.bazel  scann_builder.py  scann_ops.py  scann_ops_pybind.py  scann_ops_pybind_test.py  scann_ops_test.py
scann/scann/tree_x_hybrid/: BUILD.bazel  leaf_searcher_optional_parameter_creator.h  tree_ah_hybrid_residual.cc  tree_ah_hybrid_residual.h  tree_x_hybrid_smmd.cc  tree_x_hybrid_smmd.h  tree_x_params.cc  tree_x_params.h
scann/scann/tree_x_hybrid/internal/: BUILD.bazel  batching.h  utils.cc  utils.h
scann/scann/trees/kmeans_tree/: BUILD.bazel  kmeans_tree.cc  kmeans_tree.h  kmeans_tree_node.cc  kmeans_tree_node.h  training_options.cc  training_options.h
scann/scann/utils/: BUILD.bazel  bits.h  common.h  dataset_sampling.h  factory_helpers.cc  factory_helpers.h  fast_top_neighbors.cc  fast_top_neighbors.h  fast_top_neighbors_impl.inc  gmm_utils.cc  gmm_utils.h  hash_leaf_helpers.cc  hash_leaf_helpers.h  hwy-compact.h  index_sequence.h  input_data_utils.cc  io_npy.h  io_oss_wrapper.cc  io_oss_wrapper.h  memory_logging.cc  memory_logging.h  noise_shaping_utils.h  parallel_for.h  reduction.h  reordering_helper.cc  reordering_helper.h  reordering_helper_interface.h  sampled_index_list.h  scalar_quantization_helpers.cc  scalar_quantization_helpers.h  scann_config_utils.cc  scann_config_utils.h  single_machine_autopilot.h  single_machine_retraining.cc  single_machine_retraining.h  threads.cc  threads.h  top_n_amortized_constant.h  types.h  util_functions.cc  (+3 more)
scann/scann/utils/fixed_point/: pre_quantized_fixed_point.h
scann/scann/utils/internal/: avx2_funcs.h  avx_funcs.h
scann/scann/utils/intrinsics/: BUILD.bazel  (+12 more)
(+36 files in other folders)
