package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "one_to_many_helpers",
    hdrs = ["one_to_many_helpers.h"],
    deps = [
        ":scale_encoding_cc_proto",
        "//scann/utils:common",
        "//scann/utils:scalar_quantization_helpers",
        "//scann/utils:types",
    ],
)

cc_library(
    name = "one_to_many", copts = ["-flto"], linkopts = ["-flto"],
    srcs = ["one_to_many.cc"],
    hdrs = ["one_to_many.h"],
    tags = ["local"],
    textual_hdrs = ["one_to_many_impl.inc"],
    deps = [
        ":one_to_many_helpers",
        ":scale_encoding_cc_proto",
        "//scann/data_format:datapoint",
        "//scann/data_format:dataset",
        "//scann/distance_measures",
        "//scann/utils:common",
        "//scann/utils:scalar_quantization_helpers",
        "//scann/utils:types",
        "//scann/utils/internal:avx2_funcs",
        "//scann/utils/internal:avx_funcs",
        "//scann/utils/intrinsics:flags",
        "//scann/utils/intrinsics:fma",
        "//scann/utils/intrinsics:horizontal_sum",
        "//scann/utils/intrinsics:simd",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/base:prefetch",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/synchronization",
    ],
)

proto_library(
    name = "scale_encoding_proto",
    srcs = ["scale_encoding.proto"],
)

cc_proto_library(
    name = "scale_encoding_cc_proto",
    deps = [":scale_encoding_proto"],
)
